# libmsgq

./: .gitignore  README.md  build.sh  configure.ac
inc/: lib.h  libmsgq.h  msg_queue.h
sample/odd_even/: Makefile  odd-even  odd-even.c
sample/show_thread/: Makefile  show_thread  show_thread.c
src/: Makefile  Makefile.am  a.out  libmsgq.c  main.c  msg_queue.c  mylib.c  sample  sample.c
